--- a/Website Design/index.html
+++ b/Website Design/index.html
@@ -1,22 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css" type="text/css">
-    <link rel="stylesheet" href="style.css.map">
-    <link rel="stylesheet" href="style.scss">
-</head>
-<body>
-   <!--Part of the design, don't alter-->
-   <div class="leftRectangle">
-   </div>
-   <!--Part of the design, don't alter, in consideration not entirely sure about this border rectangle
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" type="text/css" />
+    <link rel="stylesheet" href="style.css.map" />
+    <link rel="stylesheet" href="style.scss" />
+  </head>
+  <body>
+    <!--Part of the design, don't alter-->
+    <div class="leftRectangle">
+      <!--Navbar-->
+      <div class="navbar">
+        <ul>
+          <li>Introduction</li>
+          <li>About</li>
+          <li>Approach</li>
+          <li>Extension</li>
+          <li>Mentors</li>
+          <li>Team</li>
+          <li>Links</li>
+          <li>Documentation</li>
+        </ul>
+      </div>
+    </div>
+    <!--Part of the design, don't alter, in consideration not entirely sure about this border rectangle
    <div class="borderRectangle">
    </div>
    -->
-   
-   
-
-   </body>
+  </body>
 </html>
