--- a/Website Design/index.html
+++ b/Website Design/index.html
@@ -10,19 +10,25 @@
   <body>
     <!--Part of the design, don't alter-->
     <div class="leftRectangle">
-      <!--Navbar-->
-      <div class="navbar">
-        <ul>
-          <li>Introduction</li>
-          <li>About</li>
-          <li>Approach</li>
-          <li>Extension</li>
-          <li>Mentors</li>
-          <li>Team</li>
-          <li>Links</li>
-          <li>Documentation</li>
-        </ul>
-      </div>
+      <div class="content">
+        <!--Navbar-->
+        <div class="navbar">
+          <ul>
+            <li>Introduction</li>
+            <li>About</li>
+            <li>Approach</li>
+            <li>Extension</li>
+            <li>Mentors</li>
+            <li>Team</li>
+            <li>Links</li>
+            <li>Documentation</li>
+          </ul>
+        </div>
+        
+        <div id="about">
+            <h1>About The Project</h1>
+        </div>
+    </div>
     </div>
     <!--Part of the design, don't alter, in consideration not entirely sure about this border rectangle
    <div class="borderRectangle">
